Fixed Image Styling So it doesn't stretch

--- a/client/src/components/pages/Dashboard/YourProfile/YourProfile.scss
+++ b/client/src/components/pages/Dashboard/YourProfile/YourProfile.scss
@@ -21,6 +21,8 @@
         .profile-icon {
             width: 120px;
             height: 120px;
+            object-fit: cover;
+            object-position: 50% 50%;
             position:relative;
             top: 30px;
             left: 2.25em;
